plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cloudBalance'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
	implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
	implementation "io.jsonwebtoken:jjwt-jackson:0.11.5"

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	implementation 'jakarta.validation:jakarta.validation-api'
	implementation 'org.hibernate.validator:hibernate-validator'

//	aws dependencies
	implementation platform("software.amazon.awssdk:bom:2.25.0")
// Core SDK
	implementation "software.amazon.awssdk:sts"
	implementation "software.amazon.awssdk:ec2"
	implementation "software.amazon.awssdk:rds"
	implementation "software.amazon.awssdk:autoscaling"

//	snowflakes
	implementation("net.snowflake:snowflake-jdbc:3.23.1")
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'


}

tasks.named('test') {
	useJUnitPlatform()
}
